app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-app
  namespace: playground
  labels:
    app: awesome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-app
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
        - name: awesome-app
          image: ghcr.io/arogic/awesome-app:1.0.43
          # image: nginx
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: argocd-pull-secret
