app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-app
  name: awesome-app
  namespace: playground
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: awesome-app
  type: ClusterIP
